--- a/app/src/main/res/layout/expanded.xml
+++ b/app/src/main/res/layout/expanded.xml
@@ -17,7 +17,7 @@
         android:background="@color/colorAccent" />
 
     <TextView
-        android:id="@+id/sample_layout_expanded_title"
+        android:id="@+id/hour"
         android:layout_width="365dp"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/sample_layout_expanded_title"
+        android:layout_below="@+id/hour"
         android:gravity="top"
         android:minHeight="48dp"
         android:paddingBottom="8dp"
@@ -42,7 +42,7 @@
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="-30dp"
-        android:layout_toStartOf="@+id/sample_layout_expanded_title"
+        android:layout_toStartOf="@+id/hour"
         android:tint="@android:color/black"
         app:expanded="true" />
 
