--- a/app/src/main/res/layout/activity_medicines.xml
+++ b/app/src/main/res/layout/activity_medicines.xml
@@ -7,6 +7,31 @@
     android:background="@drawable/rsz_dark_backgroung"
     tools:context=".MedicinesActivity">
 
+    <Button
+        android:id="@+id/saveBtn2"
+        android:layout_width="156dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/round_pink_button"
+        android:onClick="continueBtnListener"
+        android:text="@string/save"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addReminderBtn"
+        app:layout_constraintVertical_bias="1.0" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="112dp"
@@ -32,9 +57,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.293" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="299dp"
-        android:layout_height="389dp"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="195dp" />
+    <ListView
+        android:id="@+id/medList"
+        android:layout_width="395dp"
+        android:layout_height="331dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.711"
+        tools:layout_editor_absoluteX="8dp" />
+
 </android.support.constraint.ConstraintLayout>
