--- a/app/src/main/res/layout/item_nutrition.xml
+++ b/app/src/main/res/layout/item_nutrition.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="right"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
         app:layout_constraintEnd_toStartOf="@id/nutrition_name"
         />
 
