--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,11 +8,11 @@
     tools:context=".menuActivity">
 
     <Button
-        android:id="@+id/saveBtn2"
+        android:id="@+id/logOutBtn"
         android:layout_width="84dp"
         android:layout_height="35dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_pinkwhite_button"
         android:text="התנתק"
