--- a/app/src/main/res/layout/input_image_dialog.xml
+++ b/app/src/main/res/layout/input_image_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -37,8 +38,22 @@
         android:id="@+id/edittext"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="הקלד כאן"
+        android:hint="הקלד טקסט שברצונך לשתף"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@id/textView"
         android:layout_marginTop="8dp"/>
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="161dp"
+        android:layout_height="201dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/done2"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />
 </android.support.constraint.ConstraintLayout>
